--- a/ArgentinaPrograma/PracticasModulo3/src/styles.css
+++ b/ArgentinaPrograma/PracticasModulo3/src/styles.css
@@ -1,5 +1,5 @@
-* You can add global styles to this file, and also import other style files */
 
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap);
 
 
 *{
@@ -8,8 +8,7 @@
     padding: 0;
 }
 body{
-    font-family: 'Poppins';
-    src:url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');   
+    font-family: "Poppins", sans-serif;    
 }
 
 .container{
