css y ng  service

--- a/ArgentinaPrograma/PracticasModulo3/src/app/app.component.html
+++ b/ArgentinaPrograma/PracticasModulo3/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" width=40  alt="angularcito uwu"/>
     <app-header></app-header>
+    <app-tasks></app-tasks>
 
 </div>
