--- a/ArgentinaPrograma/PracticasModulo3/src/app/components/header/header.component.html
+++ b/ArgentinaPrograma/PracticasModulo3/src/app/components/header/header.component.html
@@ -1,6 +1,10 @@
 <header>
 
     <h1>{{title}}:</h1>
-    <app-button color="green" text="Add task"></app-button>
+    <app-button 
+        color="green" 
+        text="Add task">
+        (btnClick)="sumaTareas()"
+    </app-button>
 
 </header>
