--- a/ArgentinaPrograma/PracticasModulo3/src/app/components/tasks/tasks.component.html
+++ b/ArgentinaPrograma/PracticasModulo3/src/app/components/tasks/tasks.component.html
@@ -1,6 +1,10 @@
 <app-task-item 
     *ngFor="let task of tasks"
     [task]="task"
-    (clickQuitar)="borrarTaskDB(task)"
+    (clickQuitar)="borrarTask(task)"
+    (clickRecordar)="setReminder(task)"
+    (addClick)="addTaskDB(task)"
 >
 </app-task-item>
+
+
