--- a/ArgentinaPrograma/PracticasModulo3/src/app/components/task-item/task-item.component.css
+++ b/ArgentinaPrograma/PracticasModulo3/src/app/components/task-item/task-item.component.css
@@ -6,8 +6,7 @@
 }
 
 .task.reminder{
-    border-left: 5px solid green;
-
+    border-left: 5px solid orange;
 }
 
 .task h3{
@@ -15,6 +14,7 @@
     align-items: center;
     justify-content: space-between;
 }
+
 
 .close-card{
     position: absolute;
