--- a/ArgentinaPrograma/PracticasModulo3/src/styles.css
+++ b/ArgentinaPrograma/PracticasModulo3/src/styles.css
@@ -23,7 +23,7 @@ body{
 
 .btn {
     display: inline-block;
-    background: #000;
+    background: green;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -33,6 +33,7 @@ body{
     text-decoration: none;
     font-size: 15px;
     font-family: inherit;
+    text-align: center;
 }
 .btn:focus {
     outline: none;
